--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -5,7 +5,8 @@ body
     background-color: #292F36;
 }
 
-a{ color: #EEF0F2; }
+a{ color: #AEB8C1; }
+a:hover { color: #EEF0F2; }
 
 header{
     font-family: Courier, serif;
