--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -15,3 +15,13 @@ header{
 }
 
 footer{text-align: center;}
+
+caption {
+    font-family: 'Rock Salt', cursive;
+    padding: 20px;
+    font-style: italic;
+    caption-side: bottom;
+    color: #666;
+    text-align: right;
+    letter-spacing: 1px;
+}
