--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -16,12 +16,29 @@ header{
 
 footer{text-align: center;}
 
-caption {
-    font-family: 'Rock Salt', cursive;
+table {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
+    border: 3px solid #CD7F32;
+}
+
+thead th:nth-child(1) {
+    width: 30%;
+}
+
+thead th:nth-child(2) {
+    width: 20%;
+}
+
+thead th:nth-child(3) {
+    width: 15%;
+}
+
+thead th:nth-child(4) {
+    width: 35%;
+}
+
+th, td {
     padding: 20px;
-    font-style: italic;
-    caption-side: bottom;
-    color: #666;
-    text-align: right;
-    letter-spacing: 1px;
 }
