--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -20,4 +20,20 @@ table {
     border: 3px solid #CD7F32;
 }
 
+thead th:nth-child(1) {
+    width: 30%;
+}
+thead th:nth-child(2) {
+    width: 20%;
+}
+thead th:nth-child(3) {
+    width: 15%;
+}
+thead th:nth-child(4) {
+    width: 35%;
+}
+th, td {
+    padding: 20px;
+}
+
 footer{text-align: center;}
