--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -11,7 +11,7 @@ a:hover { color: #EEF0F2; }
 header{
     font-family: Courier, serif;
     text-align: center;
-    color: #EBCCAD;
+    color: #D7995B;
 }
 
 nav{text-align: center;}
