--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -13,7 +13,7 @@ a:hover { color: #EEF0F2; }
 header{
     font-family: Courier, serif;
     text-align: center;
-    color: #D7995B;
+    color: #b9a58c;
 }
 
 nav{text-align: center;}
