--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -57,14 +57,13 @@ input[type = text] {
     background-color: #AEB8C1;
 }
 
-.calculator__keys { 
-    display: grid;  
-}
 
-button{
-    color:#292F36;
-    background-color:#CD7F32;
-}
+
+
+
+
+
+
 
 
 html {
@@ -156,52 +155,20 @@ button {
   text-align: left;
 }
 
-input:hover,
-input:active,
-input:focus,
-textarea:hover,
-textarea:active,
-textarea:focus,
-button:hover,
-button:active,
-button:focus {
-  outline: none;
-}
-
-:root {
-  font-family: Helvetica, Arial, sans-serif;
-}
-
-html {
-  font-size: 175%;
-  font-weight: 300;
-  line-height: 1.3;
-}
-
-body {
-  align-items: center;
-  background-image: linear-gradient(236deg, #74ebd5, #acb6e5);
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-}
-
-.container {
-  max-width: 20em;
-}
-
 .container > p {
   text-align: center;
 }
 
 .calculator {
-  border-radius: 12px;
-  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  max-width: 15em;
-  overflow: hidden;
+font-size: 175%;
+font-weight: 300;
+line-height: 1.3;
+border-radius: 12px;
+box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
+margin-left: 200px;
+margin-right: 200px;
+margin-top: 2em;
+max-width: 15em;
 }
 
 .calculator__display {
@@ -245,7 +212,7 @@ body {
 }
 
 .key--equal {
-  background-image: linear-gradient(to bottom, #fe886a, #ff7033);
+  background-color:#CD7F32;
   grid-column: -2;
   grid-row: 2 / span 4;
 }
