--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -49,7 +49,8 @@ tbody tr:nth-child(even) {
     background-color: #EBCCAD;
 }
 
-input[type = text] {
+
+.form-input {
     box-sizing: border-box;
     border: 2px solid #CD7F32;
     border-radius: 10px;
@@ -66,95 +67,62 @@ input[type = text] {
 
 
 
-html {
-box-sizing: border-box;
-}
 
-*,
-*::before,
-*::after {
-box-sizing: inherit;
-}
 
-body {
-margin: 0;
-}
 
-input,
-textarea,
-button {
-border: 0;
-border-radius: 0;
-background-color: transparent;
-font-size: inherit;
-font-family: inherit;
-font-weight: inherit;
-outline: none;
-appearance: none;
-text-align: left;
-}
-
-.container > p {
-text-align: center;
+  *, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
 
 .calculator {
-font-size: 175%;
-font-weight: 300;
-line-height: 1.3;
-border-radius: 12px;
-box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
-margin-left: 200px;
-margin-right: 200px;
-margin-top: 2em;
-max-width: 15em;
+    width: 400px;
 }
 
-.calculator-screen {
-background-color: #222222;
-color: #fff;
-font-size: 1.714285714em;
-padding: 0.5em 0.75em;
-text-align: right;
+.calculator-screen{
+    width: 92%;
+    font-size: 4rem;
+    height: 80px;
+    border: none;
+    background-color: #252525;
+    color: #fff;
+    text-align: right;
+    padding-right: 20px;
+    padding-left: 10px;
 }
 
-.calculator__keys {
-background-color: #999;
-display: grid;
-grid-gap: 1px;
-grid-template-columns: repeat(4, 1fr);
+button {
+    height: 60px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 1px solid #c4c4c4;
+    font-size: 2rem;
+    color: #333;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+    text-shadow: 0 1px rgba(255,255,255,.4);
 }
 
-.calculator__keys > * {
-background-color: #fff;
-padding: 0.5em 1.25em;
-position: relative;
-text-align: center;
+button:hover {
+    background-color: #eaeaea;
 }
 
-.calculator__keys > *:active::before,
-.calculator__keys > .is-depressed::before {
-background-color: rgba(0, 0, 0, 0.2);
-bottom: 0;
-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
-content: "";
-left: 0;
-opacity: 0.3;
-position: absolute;
-right: 0;
-top: 0;
-z-index: 1;
+.equal-sign {
+    background-color: #CD7F32;
+    color: #fff;
+    height: 100%;
+    grid-area: 2 / 4 / 6 / 5;
 }
 
-.key--operator {
-background-color:#AEB8C1;
+.equal-sign:hover {
+    background-color: #eca761;
 }
 
-.key--equal {
-background-color:#CD7F32;
-grid-column: -2;
-grid-row: 2 / span 4;
+.calculator-keys {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2px;
+    padding: 2px;
 }
-
 
 footer{text-align: center;}
