--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -115,7 +115,7 @@ button:hover {
 }
 
 .equal-sign:hover {
-    background-color: #eca761;
+    background-color: #af661c;
 }
 
 .calculator-keys {
